--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,21 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
     />
-    
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css"
+    />
+    <script
+      type="text/javascript"
+      src="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js"
+    ></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <title>Metodo Grafico</title>
     <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Solve.js"></script>
   </head>
