añadir signo igual

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css"
+      href="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css"
     />
     <script
       type="text/javascript"
-      src="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js"
+      src="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js"
     ></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
